lib/src/ffi/generated/dart_monty_bindings.dart


/// Get the completed result as a JSON string.
/// Only valid after execution reached COMPLETE state.
///
/// @return  Heap-allocated JSON string, or NULL. Caller frees with monty_string_free().
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyHandle>)>()
external ffi.Pointer<ffi.Char> monty_complete_result_json(
  ffi.Pointer<MontyHandle> handle,
);

/// Check whether the completed result is an error.
///
/// @return  1 = error, 0 = success, -1 = not in Complete state.
@ffi.Native<ffi.Int Function(ffi.Pointer<MontyHandle>)>()
external int monty_complete_is_error(
  ffi.Pointer<MontyHandle> handle,
);

/// Get the name the engine is looking up.
/// Only valid after monty_start/monty_resume returned MONTY_PROGRESS_NAME_LOOKUP.
///
/// @return  Heap-allocated NUL-terminated name string, or NULL.
/// Caller frees with monty_string_free().
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyHandle>)>()
external ffi.Pointer<ffi.Char> monty_name_lookup_name(
  ffi.Pointer<MontyHandle> handle,
);

/// Resume by providing a value for the looked-up name.
///
/// @param handle      Handle in NAME_LOOKUP state.
/// @param value_json  NUL-terminated JSON encoding of the value.
/// @param out_error   Receives error message on failure. Caller frees.
/// @return            MONTY_PROGRESS_COMPLETE, _PENDING, _NAME_LOOKUP, or _ERROR.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<MontyHandle>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>(symbol: 'monty_resume_name_lookup_value')
external int _monty_resume_name_lookup_value(
  ffi.Pointer<MontyHandle> handle,
  ffi.Pointer<ffi.Char> value_json,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

MontyProgressTag monty_resume_name_lookup_value(
  ffi.Pointer<MontyHandle> handle,
  ffi.Pointer<ffi.Char> value_json,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
) => MontyProgressTag.fromValue(
  _monty_resume_name_lookup_value(
    handle,
    value_json,
    out_error,
  ),
);

/// Resume by indicating the looked-up name is undefined.
/// The engine will raise NameError.
///
/// @param handle     Handle in NAME_LOOKUP state.
/// @param out_error  Receives error message on failure. Caller frees.
/// @return           MONTY_PROGRESS_COMPLETE, _ERROR, or _PENDING.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<MontyHandle>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>(symbol: 'monty_resume_name_lookup_undefined')
external int _monty_resume_name_lookup_undefined(
  ffi.Pointer<MontyHandle> handle,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

MontyProgressTag monty_resume_name_lookup_undefined(
  ffi.Pointer<MontyHandle> handle,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
) => MontyProgressTag.fromValue(
  _monty_resume_name_lookup_undefined(
    handle,
    out_error,
  ),
);

/// Serialize compiled code to a byte buffer (snapshot).
/// Only valid in Ready state.
///
/// @param handle   Valid handle.
/// @param out_len  Receives byte count.
/// @return         Heap-allocated byte buffer, or NULL. Caller frees with monty_bytes_free().
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.Pointer<MontyHandle>,
    ffi.Pointer<ffi.Size>,
  )
>()
external ffi.Pointer<ffi.Uint8> monty_snapshot(
  ffi.Pointer<MontyHandle> handle,
  ffi.Pointer<ffi.Size> out_len,
);

/// Restore a handle from a snapshot byte buffer.
///
/// @param data       Pointer to snapshot bytes.
/// @param len        Byte count.
/// @param out_error  Receives error message on failure. Caller frees.
/// @return           New heap-allocated handle, or NULL on error.
@ffi.Native<
  ffi.Pointer<MontyHandle> Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external ffi.Pointer<MontyHandle> monty_restore(
  ffi.Pointer<ffi.Uint8> data,
  int len,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

/// Set memory limit in bytes. Call before monty_run/monty_start.
@ffi.Native<ffi.Void Function(ffi.Pointer<MontyHandle>, ffi.Size)>()
external void monty_set_memory_limit(
  ffi.Pointer<MontyHandle> handle,
  int bytes,
);

/// Set execution time limit in milliseconds.
@ffi.Native<ffi.Void Function(ffi.Pointer<MontyHandle>, ffi.Uint64)>()
external void monty_set_time_limit_ms(
  ffi.Pointer<MontyHandle> handle,
  int ms,
);

/// Set stack depth limit.
@ffi.Native<ffi.Void Function(ffi.Pointer<MontyHandle>, ffi.Size)>()
external void monty_set_stack_limit(
  ffi.Pointer<MontyHandle> handle,
  int depth,
);

/// Create a new REPL handle with empty interpreter state.
///
/// @param script_name  NUL-terminated script name for tracebacks, or NULL
/// for the default ("repl.py").
/// @param out_error    On failure, receives a heap-allocated error message.
/// Caller frees with monty_string_free(). May be NULL.
/// @return             Heap-allocated REPL handle, or NULL on error.
@ffi.Native<
  ffi.Pointer<MontyReplHandle> Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external ffi.Pointer<MontyReplHandle> monty_repl_create(
  ffi.Pointer<ffi.Char> script_name,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

/// Free a REPL handle. Safe to call with NULL or an already-freed handle.
@ffi.Native<ffi.Void Function(ffi.Pointer<MontyReplHandle>)>()
external void monty_repl_free(
  ffi.Pointer<MontyReplHandle> handle,
);

/// Feed a Python snippet to the REPL and run to completion.
///
/// The REPL handle survives — heap, globals, functions, and classes
/// persist for subsequent calls.
///
/// @param handle       Valid REPL handle from monty_repl_create().
/// @param code         NUL-terminated UTF-8 Python source.
/// @param result_json  Receives heap-allocated JSON result string.
/// Caller frees with monty_string_free(). May be NULL.
/// @param error_msg    Receives heap-allocated error message on failure,
/// or NULL on success. Caller frees with monty_string_free().
/// @return             MONTY_RESULT_OK or MONTY_RESULT_ERROR.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<MontyReplHandle>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>(symbol: 'monty_repl_feed_run')
external int _monty_repl_feed_run(
  ffi.Pointer<MontyReplHandle> handle,
  ffi.Pointer<ffi.Char> code,
  ffi.Pointer<ffi.Pointer<ffi.Char>> result_json,
  ffi.Pointer<ffi.Pointer<ffi.Char>> error_msg,
);

MontyResultTag monty_repl_feed_run(
  ffi.Pointer<MontyReplHandle> handle,
  ffi.Pointer<ffi.Char> code,
  ffi.Pointer<ffi.Pointer<ffi.Char>> result_json,
  ffi.Pointer<ffi.Pointer<ffi.Char>> error_msg,
) => MontyResultTag.fromValue(
  _monty_repl_feed_run(
    handle,
    code,
    result_json,
    error_msg,
  ),
);

/// Detect whether a source fragment is complete or needs more input.
///
/// This is a stateless function — no REPL handle is needed.
///
/// @param source  NUL-terminated UTF-8 Python source fragment.
/// @return        0 = complete, 1 = incomplete (unclosed brackets/strings),
/// 2 = incomplete block (needs trailing blank line).
@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Char>)>()
external int monty_repl_detect_continuation(
  ffi.Pointer<ffi.Char> source,
);

/// Register external function names for REPL name resolution.
@ffi.Native<
  ffi.Void Function(ffi.Pointer<MontyReplHandle>, ffi.Pointer<ffi.Char>)
>()
external void monty_repl_set_ext_fns(
  ffi.Pointer<MontyReplHandle> handle,
  ffi.Pointer<ffi.Char> ext_fns,
);

/// Start iterative REPL execution. Pauses at external function calls.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<MontyReplHandle>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>(symbol: 'monty_repl_feed_start')
external int _monty_repl_feed_start(
  ffi.Pointer<MontyReplHandle> handle,
  ffi.Pointer<ffi.Char> code,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

MontyProgressTag monty_repl_feed_start(
  ffi.Pointer<MontyReplHandle> handle,
  ffi.Pointer<ffi.Char> code,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
) => MontyProgressTag.fromValue(
  _monty_repl_feed_start(
    handle,
    code,
    out_error,
  ),
);

/// Resume REPL execution with a JSON-encoded return value.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<MontyReplHandle>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>(symbol: 'monty_repl_resume')
external int _monty_repl_resume(
  ffi.Pointer<MontyReplHandle> handle,
  ffi.Pointer<ffi.Char> value_json,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

MontyProgressTag monty_repl_resume(
  ffi.Pointer<MontyReplHandle> handle,
  ffi.Pointer<ffi.Char> value_json,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
) => MontyProgressTag.fromValue(
  _monty_repl_resume(
    handle,
    value_json,
    out_error,
  ),
);

/// Resume REPL execution with an error (raises RuntimeError in Python).
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<MontyReplHandle>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>(symbol: 'monty_repl_resume_with_error')
external int _monty_repl_resume_with_error(
  ffi.Pointer<MontyReplHandle> handle,
  ffi.Pointer<ffi.Char> error_message,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

MontyProgressTag monty_repl_resume_with_error(
  ffi.Pointer<MontyReplHandle> handle,
  ffi.Pointer<ffi.Char> error_message,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
) => MontyProgressTag.fromValue(
  _monty_repl_resume_with_error(
    handle,
    error_message,
    out_error,
  ),
);

/// Resume REPL by creating a future for the pending call.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<MontyReplHandle>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>(symbol: 'monty_repl_resume_as_future')
external int _monty_repl_resume_as_future(
  ffi.Pointer<MontyReplHandle> handle,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

MontyProgressTag monty_repl_resume_as_future(
  ffi.Pointer<MontyReplHandle> handle,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
) => MontyProgressTag.fromValue(
  _monty_repl_resume_as_future(
    handle,
    out_error,
  ),
);

/// Resolve pending REPL futures with results and errors.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<MontyReplHandle>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>(symbol: 'monty_repl_resume_futures')
external int _monty_repl_resume_futures(
  ffi.Pointer<MontyReplHandle> handle,
  ffi.Pointer<ffi.Char> results_json,
  ffi.Pointer<ffi.Char> errors_json,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

MontyProgressTag monty_repl_resume_futures(
  ffi.Pointer<MontyReplHandle> handle,
  ffi.Pointer<ffi.Char> results_json,
  ffi.Pointer<ffi.Char> errors_json,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
) => MontyProgressTag.fromValue(
  _monty_repl_resume_futures(
    handle,
    results_json,
    errors_json,
    out_error,
  ),
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyReplHandle>)>()
external ffi.Pointer<ffi.Char> monty_repl_pending_fn_name(
  ffi.Pointer<MontyReplHandle> handle,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyReplHandle>)>()
external ffi.Pointer<ffi.Char> monty_repl_pending_fn_args_json(
  ffi.Pointer<MontyReplHandle> handle,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyReplHandle>)>()
external ffi.Pointer<ffi.Char> monty_repl_pending_fn_kwargs_json(
  ffi.Pointer<MontyReplHandle> handle,
);

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<MontyReplHandle>)>()
external int monty_repl_pending_call_id(
  ffi.Pointer<MontyReplHandle> handle,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<MontyReplHandle>)>()
external int monty_repl_pending_method_call(
  ffi.Pointer<MontyReplHandle> handle,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyReplHandle>)>()
external ffi.Pointer<ffi.Char> monty_repl_os_call_fn_name(
  ffi.Pointer<MontyReplHandle> handle,
);
